--- a/1-bhk/1bhk.css
+++ b/1-bhk/1bhk.css
@@ -68,3 +68,8 @@
     margin: 0;
     text-align: center;
 }
+
+#property-container{
+    border: 2px solid rgb(211, 98, 28);
+    border-radius: 8px;
+}
