basic js part made, some changes required

--- a/1-bhk/1bhk.css
+++ b/1-bhk/1bhk.css
@@ -69,7 +69,9 @@
     text-align: center;
 }
 
-#property-container{
+#prop-container{
     border: 2px solid rgb(211, 98, 28);
     border-radius: 8px;
+    margin: 10px;
+    padding: 1.5%;
 }
