js part of 1bhk finalized

--- a/1-bhk/1bhk.css
+++ b/1-bhk/1bhk.css
@@ -69,7 +69,7 @@
     text-align: center;
 }
 
-#prop-container{
+#property-container{
     border: 2px solid rgb(211, 98, 28);
     border-radius: 8px;
     margin: 10px;
