--- a/1-bhk/1bhk.css
+++ b/1-bhk/1bhk.css
@@ -3,6 +3,7 @@
     margin-top: 0%;
     margin-left: 0%;
     margin-right: 0%;
+    scroll-behavior: smooth;
 }
 
 /* Add a black background color to the top navigation */
@@ -62,6 +63,10 @@
       display: block;
       text-align: left;
     }
+}
+
+.wrap{
+    margin: 10px;
 }
 
 .enter_price{
