--- a/3-bhk/3bhk.css
+++ b/3-bhk/3bhk.css
@@ -3,6 +3,7 @@
     margin-top: 0%;
     margin-left: 0%;
     margin-right: 0%;
+    scroll-behavior: smooth;
 }
 
 /* Add a black background color to the top navigation */
