effects to index.html

--- a/1-bhk/1bhk.css
+++ b/1-bhk/1bhk.css
@@ -74,6 +74,11 @@
     text-align: center;
 }
 
+.enter_price h1{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 5rem;
+}
+
 #property-container{
     border: 2px solid rgb(211, 98, 28);
     border-radius: 8px;
