--- a/style.css
+++ b/style.css
@@ -2,6 +2,56 @@
     scroll-behavior: smooth;
 }
 
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
 #front-top{
     background-image: url(./img/5TH-FLOOR_02.jpg);
     background-size: cover;
@@ -39,8 +89,9 @@ img{
 
 #choose_bhk{
     border: 2px solid #4A372B;
-    /* margin: 10px; */
+    margin: 7px;
     background-image: url('./img/004-wood-melamine-subttle-pattern-background-pat.jpg');
+    border-radius: 15px;
 }
 
 #choose_bhk h2{
@@ -98,4 +149,18 @@ img{
     background-image: url('./img/3-BHK-Room-Design-Opening-Image.webp');
     background-repeat: no-repeat;
     background-size: cover;   
+}
+
+#About{
+    border: 2px solid #4A372B;
+    margin: 7px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+#About h2{
+    font-size: 3em;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    margin-left: 10px;
 }
