--- a/1-bhk/1bhk.css
+++ b/1-bhk/1bhk.css
@@ -4,6 +4,14 @@
     margin-left: 0%;
     margin-right: 0%;
     scroll-behavior: smooth;
+    /* background-color: rgb(243, 175, 133); */
+}
+
+body{
+    background-image: url('./003-wood-melamine-subttle-pattern-background-pat.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 /* Add a black background color to the top navigation */
@@ -85,11 +93,18 @@ input{
     height: 3rem;
     text-align: center;
     border: #4A372B solid 5px;
+    background-color: whitesmoke;
 }
 
 #property-container{
-    border: 2px solid rgb(211, 98, 28);
+    border: 7px solid rgb(54, 21, 1);
     border-radius: 8px;
     margin: 10px;
     padding: 1.5%;
+    display: block;
+}
+
+#prop-container img{
+    position: relative;
+    display: inline-block;
 }
