start of 2bhk and 3bhk

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     scroll-behavior: smooth;
 }
 
+body{
+    background-color: rgb(87, 86, 86);
+}
+
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
