landing page update

--- a/style.css
+++ b/style.css
@@ -157,15 +157,40 @@ img{
 }
 
 #About{
+    /* padding-top: 3px; */
     border: 2px solid #4A372B;
     margin: 7px;
     border-radius: 15px;
     text-align: center;
+    background-color: rgb(247, 168, 115);
 }
 
 #About h2{
     font-size: 3em;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    margin-left: 10px;
+    /* margin-left: 10px; */
+    background-color: #4A372B;
+    display: block;
+    color: white;
+    border-radius: 15px;
+}
+
+#Concept{
+    border: 2px solid #4A372B;
+    margin: 7px;
+    border-radius: 15px;
+    text-align: center;
+    background-color: rgb(247, 168, 115);
+}
+
+#Concept h2{
+    font-size: 3em;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    /* margin-left: 10px; */
+    background-color: #4A372B;
+    display: block;
+    color: white;
+    border-radius: 14px;
 }
