--- a/style.css
+++ b/style.css
@@ -120,17 +120,19 @@ img{
     border-radius: 10px;
     width: 20%;
     height: 40vh;
-    margin: 35px;
+    margin: 30px;
     text-decoration: none;
     font-size: x-large;
     padding: 5rem;
+    display: block;
 }
 
 .blog-item{
-    /* margin-bottom: 10%; */
+    margin-bottom: 10%;
     border-radius: 5px;
     text-decoration: none;
     font-family: 'Arapey', serif;
+    /* display: inline-block; */
 }
 
 .blog-item a:hover{
