--- a/2-bhk/2bhk.css
+++ b/2-bhk/2bhk.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url('./003-wood-melamine-subttle-pattern-background-pat.jpg');
+    background-image: url('003-wood-melamine-subttle-pattern-background-pat.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
